--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ version="0.0.2"
 dynamic = ["readme"]
 dependencies = [
         "torch>=1.11.0",
+        "click==8.1.3",
+        "plotly==5.18.0",
+        "numpy==1.26.2",
     ]
 
 
