--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,9 @@
 requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
+   
 [project]
-name = "ray-tracing"
+name = "ray_tracing"
 requires-python = ">=3.9"
 authors = [
     {name = "waczyjoan"},
@@ -14,14 +15,15 @@ classifiers=[
         "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
         "Operating System :: OS Independent",
 ]
-version="0.0.2"
+version="0.0.1"
 dynamic = ["readme"]
 dependencies = [
-        "torch>=1.11.0",
+        "torch==2.0.0",
         "click==8.1.3",
         "plotly==5.18.0",
         "numpy==1.26.2",
     ]
+
 
 
 [tool.setuptools.dynamic]
